--- a/SEEDS_2021.ipynb
+++ b/SEEDS_2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMvEXEPFYVyn21kVmhlFJdU",
+      "authorship_tag": "ABX9TyPRV+3v6lUogn5qL8ot77A3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,7 +186,7 @@
         "        labelspacing=0.1,\n",
         "    )\n",
         "\n",
-        "    fig.savefig(\"fig-history.pdf\")\n",
+        "    # fig.savefig(\"fig-history.pdf\")\n",
         "    return\n",
         "\n",
         "\n",
@@ -210,7 +210,7 @@
         "        labelspacing=0.1,\n",
         "    )\n",
         "\n",
-        "    fig.savefig(\"fig-result.pdf\")\n",
+        "    # fig.savefig(\"fig-result.pdf\")\n",
         "    return\n"
       ],
       "execution_count": null,
