Fix graph plotting code

--- a/SEEDS_2021.ipynb
+++ b/SEEDS_2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOqskvAEPoiBp1ZqkdRRzDw",
+      "authorship_tag": "ABX9TyMV6SPie6aU+6jzTwwQaYad",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -368,7 +368,8 @@
         "id": "mbSt3rUVm1d5"
       },
       "source": [
-        "## 学習過程（ロス）の表示"
+        "## 学習過程の表示\n",
+        "学習の過程で、誤差（平均二乗誤差）がどのように変化したかを表示"
       ]
     },
     {
@@ -437,10 +438,7 @@
         "id": "ojoScIG3nDNB"
       },
       "source": [
-        "x = [0, 1, 2, 3, 4, 5] # input here\n",
-        "y = [0, 1, 4, 9, 7, 4] # input here\n",
-        "\n",
-        "def plot_user_graph(x, y):\n",
+        "def plot_user_graph(x, y, xlabel=\"\", ylabel=\"\"):\n",
         "    figure_width = 10\n",
         "    figure_height = figure_width / 1.6180\n",
         "    marker_size = 12\n",
@@ -456,9 +454,12 @@
         "\n",
         "    ax.plot(x, y, \"ro-\", linewidth=line_width, markerfacecolor='w', markersize=marker_size, markeredgewidth=line_width)\n",
         "\n",
+        "    ax.set_ylabel(ylabel)\n",
+        "    ax.set_xlabel(xlabel)\n",
+        "\n",
         "    return\n",
         "\n",
-        "def plot_user_scatter(x, y):\n",
+        "def plot_user_scatter(x, y, xlabel=\"\", ylabel=\"\"):\n",
         "    figure_width = 10\n",
         "    figure_height = figure_width / 1.6180\n",
         "    marker_size = 12\n",
@@ -474,9 +475,12 @@
         "\n",
         "    ax.scatter(x, y, s=120, c=\"w\", edgecolors=\"r\", marker=\"o\", linewidths=line_width)\n",
         "\n",
+        "    ax.set_ylabel(ylabel)\n",
+        "    ax.set_xlabel(xlabel)\n",
+        "\n",
         "    return\n",
         "\n",
-        "def plot_user_bar(x, y):\n",
+        "def plot_user_bar(x, y, xlabel=\"\", ylabel=\"\"):\n",
         "    figure_width = 10\n",
         "    figure_height = figure_width / 1.6180\n",
         "    marker_size = 12\n",
@@ -492,14 +496,30 @@
         "\n",
         "    ax.bar(x, y, width=0.8, color=\"w\", edgecolor=\"r\", linewidth=line_width)\n",
         "\n",
+        "    ax.set_ylabel(ylabel)\n",
+        "    ax.set_xlabel(xlabel)\n",
+        "\n",
         "    return\n",
         "\n",
-        "plot_user_graph(x, y) # 折れ線グラフ\n",
-        "plot_user_scatter(x, y) # 散布図\n",
-        "plot_user_bar(x, y) # 棒グラフ"
+        "x = [0, 1, 2, 3, 4, 5] # input here\n",
+        "y = [0, 1, 4, 9, 7, 4] # input here\n",
+        "\n",
+        "plot_user_graph(x=x, y=y, xlabel=\"Parameter\", ylabel=\"Value\") # 折れ線グラフ\n",
+        "plot_user_scatter(x=x, y=y, xlabel=\"Parameter\", ylabel=\"Value\") # 散布図\n",
+        "plot_user_bar(x=x, y=y, xlabel=\"Parameter\", ylabel=\"Value\") # 棒グラフ"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GaWD0V81iDcQ"
+      },
+      "source": [
+        "# 自主研究のまとめ\n",
+        "ここに自主研究のまとめを記入しよう"
+      ]
     }
   ]
 }
