--- a/SEEDS_2021.ipynb
+++ b/SEEDS_2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMV6SPie6aU+6jzTwwQaYad",
+      "authorship_tag": "ABX9TyOzGwMNpchemC6wlTCe54np",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,9 +82,7 @@
         "batch_size = 1024\n",
         "num_neuron = 1024\n",
         "num_layer = 5\n",
-        "activation = \"relu\"\n",
-        "\n",
-        "file_name = \"FIB1.csv\"  # rename this variable if you want to use a different dataset"
+        "activation = \"relu\""
       ],
       "execution_count": null,
       "outputs": []
@@ -174,7 +172,6 @@
         "    plt.rcParams[\"xtick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"ytick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"axes.linewidth\"] = 1.0\n",
-        "    plt.rcParams[\"pdf.fonttype\"] = 42\n",
         "\n",
         "    hist = pd.DataFrame(history.history)\n",
         "    hist[\"epoch\"] = history.epoch\n",
@@ -199,7 +196,6 @@
         "    #     labelspacing=0.1,\n",
         "    # )\n",
         "\n",
-        "    # fig.savefig(\"fig-history.pdf\")\n",
         "    return\n",
         "\n",
         "\n",
@@ -212,7 +208,6 @@
         "    plt.rcParams[\"xtick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"ytick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"axes.linewidth\"] = 1.0\n",
-        "    plt.rcParams[\"pdf.fonttype\"] = 42\n",
         "\n",
         "    fig = plt.figure(figsize=(figure_width, figure_height))\n",
         "    ax = fig.add_subplot(1, 1, 1)\n",
@@ -233,7 +228,6 @@
         "        labelspacing=0.1,\n",
         "    )\n",
         "\n",
-        "    # fig.savefig(\"fig-result.pdf\")\n",
         "    return\n",
         "\n",
         "def plot_subfigure(x_orig, y_orig, y_pred, div=(2, 3)):\n",
@@ -245,7 +239,6 @@
         "    plt.rcParams[\"xtick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"ytick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"axes.linewidth\"] = 1.0\n",
-        "    plt.rcParams[\"pdf.fonttype\"] = 42\n",
         "\n",
         "    fig = plt.figure(figsize=(figure_width, figure_height))\n",
         "    plt.subplots_adjust(wspace=0.4, hspace=0.6)\n",
@@ -310,7 +303,7 @@
       },
       "source": [
         "# Load data\n",
-        "x_np, y_np = load_data(file_name)\n",
+        "x_np, y_np = load_data(\"FIB1.csv\")\n",
         "\n",
         "# Normalization\n",
         "xmean, xstd, norm_x = normalize(x_np)\n",
@@ -447,7 +440,6 @@
         "    plt.rcParams[\"xtick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"ytick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"axes.linewidth\"] = 1.0\n",
-        "    plt.rcParams[\"pdf.fonttype\"] = 42\n",
         "\n",
         "    fig = plt.figure(figsize=(figure_width, figure_height))\n",
         "    ax = fig.add_subplot(1, 1, 1)\n",
@@ -468,7 +460,6 @@
         "    plt.rcParams[\"xtick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"ytick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"axes.linewidth\"] = 1.0\n",
-        "    plt.rcParams[\"pdf.fonttype\"] = 42\n",
         "\n",
         "    fig = plt.figure(figsize=(figure_width, figure_height))\n",
         "    ax = fig.add_subplot(1, 1, 1)\n",
@@ -489,7 +480,6 @@
         "    plt.rcParams[\"xtick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"ytick.direction\"] = \"in\"\n",
         "    plt.rcParams[\"axes.linewidth\"] = 1.0\n",
-        "    plt.rcParams[\"pdf.fonttype\"] = 42\n",
         "\n",
         "    fig = plt.figure(figsize=(figure_width, figure_height))\n",
         "    ax = fig.add_subplot(1, 1, 1)\n",
